--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.2.1",
+    "framer-motion": "^9.1.2",
     "jotai": "^1.12.1",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flags-select": "^2.2.3",
     "sharp": "^0.31.3"
   },
   "devDependencies": {
